Create user profile with saved events

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -104,3 +104,10 @@ $maybe-color: $font-tertiary-color;
     transform: rotate(360deg);
   }
 }
+
+.is-hoverable {
+  &:hover {
+    color: $brand-color;
+    fill: $brand-color;
+  }
+}
