--- a/web/app/views/components/follow/_follow.html.erb
+++ b/web/app/views/components/follow/_follow.html.erb
@@ -1,7 +1,7 @@
 <%
 
   type = local_assigns.fetch(:type)
-  event_id = local_assigns.fetch(:event_id)
+  event_id = local_assigns.fetch(:event_id, nil)
   expand_to_similar = local_assigns.fetch(:expand_to_similar, false)
 
 %>
