--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -5,75 +5,84 @@
 %>
 
 <div id="saves" class="me-saves" data-controller="saves" data-target="saves.saves" data-observable="float-menu.section">
-    <% if current_user and !current_user.taste_events_saved.empty? %>
-      <h2 data-target="saves.header" class="">
-        Eventos salvos
-      </h2>
-      <div class="me-icon__group">
-        <div data-target="saves.scrollLeft" data-action="click->saves#scrollLeft"
-             class="me-icon me-icon--scroll-left me-icon--off">
-          <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon"
-               style="pointer-events: none; display: block; width: 100%; height: 100%;">
-            <g class="style-scope iron-icon">
-              <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" class="style-scope iron-icon"></path>
-            </g>
-          </svg>
-        </div>
-        <div class="me-icon me-icon--scroll-right me-icon--off"
-             data-action="click->saves#scrollRight"
-             data-target="saves.scrollRight">
-          <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon"
-               style="pointer-events: none; display: block; width: 100%; height: 100%;">
-            <g class="style-scope iron-icon">
-              <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z" class="style-scope iron-icon"></path>
-            </g>
-          </svg>
-        </div>
-      </div>
-      <div class="me-saves__list mdc-layout-grid"
-           data-target="saves.list">
-        <div class="mdc-layout-grid__inner">
-          <% saved_events.each do |event| %>
-            <div class="mdc-layout-grid__cell">
-              <div class="me-card mdc-card me-card--saves event-<%= event.id %>"
-                   data-action="mouseover->saves-events#showEventDetails"
-                   data-controller="saves-events"
-                   data-saves-events-identifier="<%= event.id %>"
-                   data-saves-flip-key="<%= "saves-#{dom_id event}" %>"
-                   data-target="saves-events.event">
-                <div class="me-card__remove"
-                     data-action="click->saves-events#remove"
-                     data-target="saves-events.remove">
-                  <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet" focusable="false">
-                    <path
-                      d="m55.7 52.7c6.2 6.7 12.4 13.5 18.6 20.2 2.2 2.4-1.4 5.9-3.5 3.5-6.2-6.7-12.3-13.4-18.5-20.1-6.1 6.8-12.3 13.4-18.4 20.1-2.2 2.4-5.7-1.2-3.5-3.5 6.2-6.7 12.4-13.5 18.6-20.2-6.2-6.7-12.4-13.5-18.6-20.2-2.2-2.4 1.4-5.9 3.5-3.5 6.1 6.6 12.3 13.3 18.4 20 6.2-6.7 12.3-13.4 18.5-20.1 2.2-2.4 5.7 1.2 3.5 3.5-6.2 6.8-12.4 13.5-18.6 20.3z"></path>
-                  </svg>
-                </div>
-                <a href="<%= event.url %>"
-                   title="<%= event.details_name %>">
-                  <div class="mdc-card__media mdc-card__media--16-9" style="<%= get_image_style_attr event, preload: true %>">
-                    <!-- <div class="mdc-card__media mdc-card__media--16-9 lazy-bgimage" data-src="<%#= event.image[:feed].url %>" style="<%#= get_image_style_attr event %>"> -->
-                    <div class="me-card__overlay"
-                         data-target="saves-events.overlay"></div>
-                  </div>
-                  <div class="me-card__date <%= 'is-highlight' if ['hoje', 'amanhã'].include?(event.day_of_week['decorator'])  %>" data-target="saves-events.date">
-                    <%= event.day_of_week['decorator'] %> <%= format_hour event.first_day_time %>
-                  </div>
-                </a>
-              </div>
-            </div>
-          <% end %>
-
-          <% if saved_events.length < 6 %>
-            <div class="me-saves__empty">
-<!--              <i class="material-icons-sharp sentiment-satisfied">-->
-<!--                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><circle cx="15.5" cy="9.5" r="1.5"/><circle cx="8.5" cy="9.5" r="1.5"/><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4.41-6.11c-.35-.22-.82-.11-1.03.24-.74 1.17-2 1.87-3.38 1.87s-2.64-.7-3.38-1.88c-.22-.35-.68-.46-1.03-.24-.35.22-.46.68-.24 1.03C8.37 16.54 10.1 17.5 12 17.5s3.63-.97 4.65-2.58c.22-.35.11-.81-.24-1.03z"/></svg>-->
-<!--              </i>-->
-              <span>Explore as coleções de eventos abaixo e os salve para ver aqui.</span>
-            </div>
-          <% end %>
-        </div>
-      </div>
-
+  <% if current_user and !current_user.taste_events_saved.empty? %>
+    <h2 data-target="saves.header" class="me-saves__title">
+      Eventos salvos
+      <%= link_to user_path current_user do %>
+      <span class="is-hoverable">
+          Ver todos
+<!--          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">-->
+<!--              <path fill="none" d="M0 0h24v24H0V0z"/>-->
+<!--              <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"/>-->
+<!--            </svg>-->
+      </span>
       <% end %>
-  </div>
+    </h2>
+    <div class="me-icon__group">
+      <div data-target="saves.scrollLeft" data-action="click->saves#scrollLeft"
+           class="me-icon me-icon--scroll-left me-icon--off">
+        <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon"
+             style="pointer-events: none; display: block; width: 100%; height: 100%;">
+          <g class="style-scope iron-icon">
+            <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" class="style-scope iron-icon"></path>
+          </g>
+        </svg>
+      </div>
+      <div class="me-icon me-icon--scroll-right me-icon--off"
+           data-action="click->saves#scrollRight"
+           data-target="saves.scrollRight">
+        <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon"
+             style="pointer-events: none; display: block; width: 100%; height: 100%;">
+          <g class="style-scope iron-icon">
+            <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z" class="style-scope iron-icon"></path>
+          </g>
+        </svg>
+      </div>
+    </div>
+    <div class="me-saves__list mdc-layout-grid"
+         data-target="saves.list">
+      <div class="mdc-layout-grid__inner">
+        <% saved_events.each do |event| %>
+          <div class="mdc-layout-grid__cell">
+            <div class="me-card mdc-card me-card--saves event-<%= event.id %>"
+                 data-action="mouseover->saves-events#showEventDetails"
+                 data-controller="saves-events"
+                 data-saves-events-identifier="<%= event.id %>"
+                 data-saves-flip-key="<%= "saves-#{dom_id event}" %>"
+                 data-target="saves-events.event">
+              <div class="me-card__remove"
+                   data-action="click->saves-events#remove"
+                   data-target="saves-events.remove">
+                <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet" focusable="false">
+                  <path
+                    d="m55.7 52.7c6.2 6.7 12.4 13.5 18.6 20.2 2.2 2.4-1.4 5.9-3.5 3.5-6.2-6.7-12.3-13.4-18.5-20.1-6.1 6.8-12.3 13.4-18.4 20.1-2.2 2.4-5.7-1.2-3.5-3.5 6.2-6.7 12.4-13.5 18.6-20.2-6.2-6.7-12.4-13.5-18.6-20.2-2.2-2.4 1.4-5.9 3.5-3.5 6.1 6.6 12.3 13.3 18.4 20 6.2-6.7 12.3-13.4 18.5-20.1 2.2-2.4 5.7 1.2 3.5 3.5-6.2 6.8-12.4 13.5-18.6 20.3z"></path>
+                </svg>
+              </div>
+              <a href="<%= event.url %>"
+                 title="<%= event.details_name %>">
+                <div class="mdc-card__media mdc-card__media--16-9" style="<%= get_image_style_attr event, preload: true %>">
+                  <!-- <div class="mdc-card__media mdc-card__media--16-9 lazy-bgimage" data-src="<%#= event.image[:feed].url %>" style="<%#= get_image_style_attr event %>"> -->
+                  <div class="me-card__overlay"
+                       data-target="saves-events.overlay"></div>
+                </div>
+                <div class="me-card__date <%= 'is-highlight' if ['hoje', 'amanhã'].include?(event.day_of_week['decorator']) %>" data-target="saves-events.date">
+                  <%= event.day_of_week['decorator'] %> <%= format_hour event.first_day_time %>
+                </div>
+              </a>
+            </div>
+          </div>
+        <% end %>
+
+        <% if saved_events.length < 6 %>
+          <div class="me-saves__empty">
+            <!--              <i class="material-icons-sharp sentiment-satisfied">-->
+            <!--                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><circle cx="15.5" cy="9.5" r="1.5"/><circle cx="8.5" cy="9.5" r="1.5"/><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4.41-6.11c-.35-.22-.82-.11-1.03.24-.74 1.17-2 1.87-3.38 1.87s-2.64-.7-3.38-1.88c-.22-.35-.68-.46-1.03-.24-.35.22-.46.68-.24 1.03C8.37 16.54 10.1 17.5 12 17.5s3.63-.97 4.65-2.58c.22-.35.11-.81-.24-1.03z"/></svg>-->
+            <!--              </i>-->
+            <span>Explore as coleções de eventos abaixo e os salve para ver aqui.</span>
+          </div>
+        <% end %>
+      </div>
+    </div>
+
+  <% end %>
+</div>
