--- a/web/app/views/users/index.html.erb
+++ b/web/app/views/users/index.html.erb
@@ -27,7 +27,7 @@
       <tr>
         <td><%= image_tag(user.picture, class: 'picture') if user.picture %></td>
         <td><%= user.id %></td>
-        <td><%= user.name %></td>
+        <td><%= link_to user.name, user_path(user) %></td>
         <td><%= user.email %></td>
         <td><%= distance_of_time_in_words_to_now user.created_at %></td>
         <td><%= distance_of_time_in_words_to_now user.current_sign_in_at if user.current_sign_in_at %></td>
