--- a/web/app/views/users/show.html.erb
+++ b/web/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
 
   <%# if @topics %>
 <!--    <div class="me-card__topics">-->
-      <%#= render partial: 'components/follow/follow', locals: {user: current_user, chips: @topics.sort, type: 'organizers'} %>
+      <%#= render partial: 'components/follow/follow', locals: {user: current_user, chips: @topics, event_id: ''} %>
 <!--    </div>-->
   <%# end %>
 
