--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -57,6 +57,8 @@ $mdc-layout-grid-columns: (
       position: relative;
       z-index: 3;
       letter-spacing: -0.01em;
+      display: flex;
+      align-items: center;
       @include mdc-layout-grid-media-query_("phone") {
         font-size: 22px;
         line-height: 1em;
@@ -71,9 +73,15 @@ $mdc-layout-grid-columns: (
       font-family: $font-secondary-family;
       color: $font-secondary-color;
       line-height: 1.2em;
+      .me-page--profile__section & {
+        margin: 0 0 24px 0;
+      }
       @include mdc-layout-grid-media-query_("phone") {
         padding: 0 $section-padding-phone;
         font-size: 13px;
+        .me-page--profile__section & {
+          margin: 0 0 12px 0;
+        }
       }
     }
 
@@ -121,7 +129,6 @@ $mdc-layout-grid-columns: (
 
     & i {
       font-style: normal;
-      color: $brand-color;
       font-weight: 500;
       @include mdc-layout-grid-media-query_("phone") {
         //display: none;
