--- a/web/app/views/components/follow/_follow.html.erb
+++ b/web/app/views/components/follow/_follow.html.erb
@@ -1,6 +1,6 @@
 <%
 
-  type = local_assigns.fetch(:type)
+  type = local_assigns.fetch(:type, nil)
   event_id = local_assigns.fetch(:event_id, nil)
   expand_to_similar = local_assigns.fetch(:expand_to_similar, false)
 
