--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
 
   <%= Gon::Base.render_data %>
 
-  <script src="https://sdk.pushy.me/web/1.0.5/pushy-sdk.js"></script>
+  <script src="https://sdk.pushy.me/web/1.0.5/pushy-sdk.js" defer></script>
 
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
