--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -55,7 +55,7 @@
 
     @include mdc-layout-grid-media-query_("phone") {
       margin: 12px 0 0 0;
-      padding: 0 0 0 60px;
+      // padding: 0 0 0 60px;
     }
   }
 
