--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -50,13 +50,18 @@
   }
 
   &--feed-section {
+    margin: 12px 0 0 0;
     //max-width: 85%;
     // padding-top: 35px;
 
     @include mdc-layout-grid-media-query_("phone") {
-      margin: 12px 0 0 0;
+      margin: 6px 0 0 0;
       // padding: 0 0 0 60px;
     }
+  }
+
+  &--search {
+
   }
 
   &--train-section {
@@ -69,7 +74,7 @@
     }
   }
 
-  &--events-section {
+  &--events {
     max-width: 700px;
     margin: auto;
     @include is-open-up-animated;
@@ -100,7 +105,7 @@
       }
 
       & .me-feed__section {
-        padding: 0;
+        //padding: 0;
       }
 
       & .me-card--feed {
