--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-<section class="me-page me-page--events-section is-animated">
+<section class="me-page me-page--events is-animated">
 
   <%= notice %>
 
