--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -9,12 +9,9 @@
     <h2 data-target="saves.header" class="me-saves__title">
       Eventos salvos
       <%= link_to user_path current_user do %>
-      <span class="is-hoverable">
-          Ver todos
-<!--          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">-->
-<!--              <path fill="none" d="M0 0h24v24H0V0z"/>-->
-<!--              <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"/>-->
-<!--            </svg>-->
+      <span class="me-see-all is-hoverable">
+          Ver mais
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"/></svg>
       </span>
       <% end %>
     </h2>
