--- a/web/app/assets/stylesheets/components/me-bottom-navigation.scss
+++ b/web/app/assets/stylesheets/components/me-bottom-navigation.scss
@@ -1,5 +1,3 @@
-
-
 .me-bottom-navigation {
   height: 56px;
   width: 100vw;
@@ -8,12 +6,16 @@
   z-index: 5;
   background: $surface-color;
   box-shadow: 0px 0px 3px #00000030;
+  @include desktop-only {
+    display: none;
+  }
 
   &__items {
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 100%;
+    overflow: hidden;
   }
 
   &__item {
@@ -26,7 +28,6 @@
     justify-content: center;
     width: 100%;
     height: inherit;
-    overflow: hidden;
 
     &.active {
       & .icon, .label {
@@ -42,7 +43,7 @@
     }
 
     & .label {
-      font-size: 12px;
+      font-size: 10px;
       font-family: $font-secondary-family;
       position: relative;
       top: -3px;
