--- a/web/app/assets/stylesheets/components/me-notification.scss
+++ b/web/app/assets/stylesheets/components/me-notification.scss
@@ -21,6 +21,7 @@
     margin: 0;
     padding: 18px 0;
     box-shadow: none;
+    color: $font-tertiary-color;
     @include mobile-only {
       padding: 18px 0 6px 0;
     }
