--- a/web/app/assets/stylesheets/components/me-search-field.scss
+++ b/web/app/assets/stylesheets/components/me-search-field.scss
@@ -3,115 +3,27 @@
 
 $icon-color: #616161;
 $border-color: #e0e0e0;
+$field-height: 44px;
 
 .me-search-field {
   align-self: center;
   width: 70%;
-  height: 48px;
+  height: $field-height;
   border-radius: 0;
   transition: height 0.2s linear;
   padding: 0 12px;
   margin: auto;
-
   @include mdc-layout-grid-media-query_("phone") {
     border-radius: 3px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-  }
-
-  &__bot {
-    width: 100%;
-    align-self: flex-end;
-    position: absolute;
-    height: 450px;
-    z-index: 2;
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0s, opacity 0.2s linear;
-
-    @include mdc-layout-grid-media-query_("phone") {
-      height: 100vh;
-    }
-
-    &::before {
-      content: " ";
-      background: linear-gradient(to bottom, white 7%, transparent 19%);
-      width: 100vw;
-      height: 100vh;
-      position: absolute;
-      pointer-events: none;
-    }
-
-    & iframe {
-      border: 0;
-      width: inherit;
-      height: inherit;
+    [data-controller="search"] & {
+      width: 100%;
     }
   }
 
-  &__reply {
-    border-radius: 30px;
-    color: $brand-color;
-    border: 1px solid $brand-color;
-    position: absolute;
-    align-self: center;
-    padding: 4px 6px;
-    cursor: pointer;
-    font-weight: 500;
-    font-size: 12px;
-    text-transform: uppercase;
-    left: 215px;
-
-    @include mdc-layout-grid-media-query_("phone") {
-      display: none;
-      padding: 12px 8px;
-      color: $font-tertiary-color;
-      background-color: unset;
-      border: unset;
-      right: 6px;
-      width: 100px;
-      left: unset;
-    }
-
-    &:hover {
-      background-color: $brand-color;
-      color: white;
-    }
-  }
-
-  &__close {
-    z-index: 2;
-    visibility: hidden;
-    text-align: center;
-    transition: visibility 0s, opacity 0.2s linear;
-    position: absolute;
-    opacity: 0;
-    right: 6px;
-    top: 15px;
-    background: $surface-color;
-    cursor: pointer;
-
-    @include mdc-layout-grid-media-query_("phone") {
-      background: linear-gradient(to bottom, $surface-color 65%, transparent);
-      width: 100vw;
-      height: 50px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: fixed;
-      top:0;
-    }
-
-    & span {
-      padding: 12px 45px;
-      text-transform: uppercase;
-      font-size: 0.9em;
-      color: $font-secondary-color;
-    }
-
-    &--bot-on {
-      visibility: visible;
-      opacity: 1;
-    }
+  & form {
+    display: flex;
+    align-items: center;
   }
 
   & .material-icons {
@@ -128,8 +40,7 @@ $border-color: #e0e0e0;
     font-size: 16px;
     padding: 0 12px;
     box-sizing: border-box;
-    height: 48px;
-    width: 90%;
+    height: $field-height;
     font-weight: 400;
     outline: none;
     background: transparent;
@@ -137,56 +48,13 @@ $border-color: #e0e0e0;
     transition: border 0.1s ease-out;
     border-bottom-color: transparent !important;
     align-self: baseline;
-
     @include mdc-layout-grid-media-query_("phone") {
       padding: 0 12px;
+      font-size: 13px;
+      font-weight: 400;
     }
   }
 
-  //& .search-icon {
-  //  color: $icon-color;
-  //  position: absolute;
-  //  top: 13px;
-  //  left: 24px;
-  //  z-index: 3;
-  //  display: -ms-inline-flexbox;
-  //  display: -webkit-inline-flex;
-  //  display: inline-flex;
-  //  -ms-flex-align: center;
-  //  -webkit-align-items: center;
-  //  align-items: center;
-  //  -ms-flex-pack: center;
-  //  -webkit-justify-content: center;
-  //  justify-content: center;
-  //  position: relative;
-  //  vertical-align: middle;
-  //  fill: currentcolor;
-  //  stroke: none;
-  //  width: 24px;
-  //  height: 24px;
-  //}
 
-  &--bot-on {
-    height: 450px;
-    box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
-    0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
-    @include mdc-text-field-textarea-fill-color($color: white);
-    will-change: unset;
-    transition: height 0.2s linear;
-    
-    @include mdc-layout-grid-media-query_("phone") {
-      box-shadow: unset;
-      width: 100vw;
-      height: 100%;
-      border-radius: 0;
-      position: fixed;
-      top: 0;
-      left: 0;
-    }
 
-    &::before,
-    ::after {
-      content: none;
-    }
-  }
 }
