--- a/web/app/views/collections/index.js.erb
+++ b/web/app/views/collections/index.js.erb
@@ -1,4 +1,3 @@
-
 (function () {
 
 	const promise = new Promise(function (resolve, reject) {
@@ -8,7 +7,15 @@
 			requestAnimationFrame(function () {
 				const morph = morphdom.default(sectionElem, '<%= j render partial: "components/collection/collection", locals: @locals %>'.trim(), {
 					onBeforeElUpdated: function (fromEl, toEl) {
-						return !fromEl.isEqualNode(toEl);
+						if (fromEl.dataset.fixed == 'true') {
+							return false
+						}
+
+						if (fromEl.isEqualNode(toEl)) {
+							return false
+            }
+
+						return true
 					}
 				});
 				resolve(morph)
