--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -6,6 +6,7 @@
   total_events_in_collection = opts.dig(:detail, :total_events_in_collection) || 0
   actual_events_in_collection = opts.dig(:detail, :actual_events_in_collection) || 0
   filters_applyed = opts.dig(:detail, :init_filters_applyed) || {}
+  # disposition = opts.dig(:disposition) || :horizontal
   followable = opts.dig(:followable) || false
   json_request = local_assigns.fetch(:json_request, false)
 
@@ -18,10 +19,19 @@
          data-section-actual-events-in-collection="<%= actual_events_in_collection %>"
          data-section-load-more-loading="false"
          data-observable="float-menu.section"
+         data-section-continue-to-path="<%= opts[:continue_to] %>"
          id="<%= identifier %>">
   <div class="me-feed__section-head">
     <h2>
       <%= title[:principal] %>
+      <% if actual_events_in_collection < total_events_in_collection %>
+        <span class="me-see-all is-hoverable"
+              data-fixed="true"
+              data-action="click->section#loadMore">
+          Ver mais
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"/></svg>
+        </span>
+      <% end %>
       <%= render partial: 'components/follow/follow_button', locals: {
           identifier: identifier,
           user:       current_user,
@@ -31,7 +41,7 @@
     <div class="me-feed__section-title-secondary">
       <%= title[:secondary] %>
     </div>
-    <% if filters %>
+    <%# if filters %>
       <div class="me-filter"
            data-controller="filter"
            data-filter-section-identifier="<%= identifier %>"
@@ -77,7 +87,7 @@
                      cached:  true) %>
         <% end %>
       </div>
-    <% end %>
+    <%# end %>
   </div>
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner"
@@ -105,32 +115,23 @@
                    cached:  true) if !mobile_device? || !['feed'].include?(opts[:origin]) %>
         <%# end %>
 
-        <% if actual_events_in_collection < total_events_in_collection && mobile_device? %>
+        <% if actual_events_in_collection < total_events_in_collection %>
           <div data-action="click->section#loadMore"
                data-target="section.loadMoreButton"
-               class="me-feed__load-more me-feed__load-more--mobile">
+               class="me-feed__load-more me-feed__load-more--horizontal">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
               <path fill="none" d="M0 0h24v24H0V0z"/>
               <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"/>
             </svg>
           </div>
-          <div class="me-feed__load-more me-feed__load-more--mobile is-loading">
+          <div class="me-feed__load-more me-feed__load-more--horizontal is-loading">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
               <path fill="none" d="M0 0h24v24H0V0z"/>
               <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/>
             </svg>
           </div>
-
         <% end %>
 
-        <%# if total_events_in_collection < 4 %>
-        <!-- <div class="me-feed__empty">
-          <i class="material-icons-sharp sentiment-satisfied">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><circle cx="15.5" cy="9.5" r="1.5"/><circle cx="8.5" cy="9.5" r="1.5"/><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4.41-6.11c-.35-.22-.82-.11-1.03.24-.74 1.17-2 1.87-3.38 1.87s-2.64-.7-3.38-1.88c-.22-.35-.68-.46-1.03-.24-.35.22-.46.68-.24 1.03C8.37 16.54 10.1 17.5 12 17.5s3.63-.97 4.65-2.58c.22-.35.11-.81-.24-1.03z"/></svg>
-          </i>
-          <span>Estes são todos os eventos disponíveis para esta coleção. Experimente explorar mais ou diminuir os filtros.</span>
-        </div> -->
-        <%# end %>
 
       <% end %>
     </div>
@@ -141,10 +142,10 @@
                },
                cached:  true) if mobile_device? && ['feed'].include?(opts[:origin]) %>
     <% if actual_events_in_collection < total_events_in_collection %>
-      <div class="me-feed__load-more"
+      <div class="me-feed__load-more me-feed__load-more--vertical"
            data-action="click->section#loadMore"
            data-target="section.loadMoreButton">
-        <button class="mdc-button">
+        <button class="mdc-button mdc-button--outlined">
           <span class="mdc-button__label">mostrar mais</span>
         </button>
       </div>
