--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -41,8 +41,8 @@
                        opts:       {
                            type:    :large,
                            filters: {
-                               categories: true,
-                               kinds:      true,
+                               categories: false,
+                               kinds:      false,
                                ocurrences: true
                            },
                            detail:  @items[:new_today][:detail],
@@ -62,11 +62,12 @@
                        opts:       {
                            type:    :large,
                            filters: {
-                               categories: true,
-                               kinds:      true,
+                               categories: false,
+                               kinds:      false,
                                ocurrences: true
                            },
                            detail:  @items[:week][:detail],
+                           continue_to: '/porto-alegre/eventos/semana',
                            origin:  :feed
                        }
                    } %>
@@ -83,12 +84,13 @@
                        opts:       {
                            type:    :large,
                            filters: {
-                               categories: true,
-                               kinds:      true,
+                               categories: false,
+                               kinds:      false,
                                ocurrences: true
                            },
                            detail:  @items[:follow][:detail],
-                           origin:  :feed
+                           origin:  :feed,
+                           continue_to: "/#{current_user.slug}/seguindo"
                        }
                    } %>
       <% end %>
@@ -99,7 +101,7 @@
                    locals:  {
                        items:      @items[:user_suggestions],
                        title:      {
-                           principal: "Indicados para #{current_user.name}",
+                           principal: "Indicados para #{current_user.first_name}",
                            secondary: "Explore os eventos que indicamos com base no seu gosto pessoal"
                        },
                        identifier: 'user-suggestions',
@@ -108,10 +110,11 @@
                            filters: {
                                categories: true,
                                kinds:      false,
-                               ocurrences: true
+                               ocurrences: false
                            },
                            detail:  @items[:user_suggestions][:detail],
-                           origin:  :feed
+                           origin:  :feed,
+                           continue_to: "/#{current_user.slug}/sugestoes"
                        }
                    } %>
 
