--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -84,7 +84,7 @@
   <!-- End Facebook Pixel Code -->
 
 </head>
-<body>
+<body data-controller="<%= controller_name %>" data-action="<%= action_name %>">
 <!-- Google Tag Manager (noscript) -->
 <noscript>
   <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WH7RVCR"
@@ -95,7 +95,7 @@
 <div class="me-top-app-bar__fake-size"></div>
 
 <%= render partial: "layouts/app-top-bar" %>
-<%#= render partial: "feeds/float_menu" %>
+<%= render partial: "feeds/float_menu" unless mobile_device? %>
 
 <%= yield %>
 
@@ -107,13 +107,16 @@
     </div>
     <div class="mdc-snackbar__actions">
       <button class="mdc-icon-button mdc-snackbar__dismiss material-icons" title="Dismiss">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+          <path fill="none" d="M0 0h24v24H0V0z"/>
+          <path d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"/>
+        </svg>
       </button>
     </div>
   </div>
 </div>
 
-<%= render partial: 'components/bottom-navigation' %>
+<%= render partial: 'components/bottom-navigation' if mobile_device? %>
 <%= render partial: 'layouts/footer' %>
 
 </body>
