--- a/web/app/views/layouts/dashboard.html.erb
+++ b/web/app/views/layouts/dashboard.html.erb
@@ -51,7 +51,7 @@
   </section>
 <% elsif params['controller'] == 'events' && params['action'] == 'show' %>
   <%= render partial: "layouts/app-top-bar", locals: {controller: 'events'} %>
-  <section class="me-page me-page--events-section is-animated">
+  <section class="me-page me-page--events is-animated">
     <!--    <div class="me-overlay"></div>-->
     <%= yield %>
   </section>
