--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -1,13 +1,13 @@
-<div class="me-feed me-page__section">
+<div class="me-feed me-page--search me-page__section">
 
-  <% unless @events_found.suggestions.empty? %>
+  <% if @events_found&.suggestions %>
     <section class="me-feed__section" style="margin: 0 auto 25px auto;">
       <div class="me-feed__section-head">
         <h2>Você quis dizer?</h2>
       </div>
       <div class="me-chip-set__wrapper">
         <div class="me-chip-set me-chip-set--categories mdc-chip-set mdc-chip-set--choice">
-          <% @events_found.suggestions.each do |suggestion| %>
+          <% @events_found&.suggestions&.each do |suggestion| %>
             <a href="<%= search_index_path({q: suggestion}) %>" class="me-chip mdc-chip">
               <span class="mdc-chip__text"><%= suggestion %></span>
             </a>
@@ -17,9 +17,9 @@
     </section>
   <% end %>
 
-  <% if @locals.dig(:opts, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
+  <% if @locals&.dig(:opts, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
     <%= render partial: "components/collection/collection", locals: @locals %>
-  <% else %>
+  <% elsif @locals&.dig(:opts, :detail, :total_events_in_collection).try { |counter| counter == 0 } %>
     <section class="me-feed__section" style="margin: 0 auto 25px auto;">
       <div class="me-feed__section-head">
         <h2>Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path %>.</h2>
