Fix in search form

--- a/web/app/views/layouts/_app-top-bar.html.erb
+++ b/web/app/views/layouts/_app-top-bar.html.erb
@@ -16,7 +16,7 @@
              data-target="chat.field"
              data-turbolinks-permanent
              id="me-chat">
-          <form action="/search"
+          <form action="/busca"
                 method="get"
                 name="search"
                 style="width: 100%">
