--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -1,6 +1,6 @@
 <div class="me-feed me-page--search me-page__section">
 
-  <% unless @events_found.try { |events| events.suggestions.blank? } %>
+  <% if @events_found&.suggestions %>
     <section class="me-feed__section" style="margin: 0 auto 25px auto;">
       <div class="me-feed__section-head">
         <h2>Você quis dizer?</h2>
